# biomni-ui

./: .env.example  .gitignore  .gitmodules  README.md  TO_DO.md  biomni_output.txt  logging.json  pyproject.toml  pytest.ini  zzz.ipynb  zzz.py  zzz.sh
.roo/rules/: rules-mcp.md  rules.md
biomni_ui/: .env.example  __init__.py  agents.py  app.py  biomni_subprocess_wrapper.py  biomni_wrapper.py  config.py  constants.py  file_manager.py  file_processor.py  file_validator.py  logger.py  mcp_servers.py  mock_biomni.py  models.py  output_parser.py  session_manager.py  utils.py
biomni_ui/scripts/: run_biomni_mcp_cluster.py
doc/: async_calls.md  file_upload.md  prompt.md
eval/: README.md  eval_llm_judge.py  rubric.yaml
eval/cases/: brca1_boolean.yaml  brca1_coords.yaml  rosalind_DNA_counting.yaml  rosalind_RNA_splicing.yaml  rosalind_graph_theory.yaml  rosalind_n50_n75.yaml  rosalind_orfs.yaml  rosalind_transition_transversion.yaml  sry.yaml
eval/cases/files/: dna_counting.fasta  graph_theory.fasta  n50_n75.fasta  orf_sequence.fasta
scripts/: run.sh
tests/: conftest.py  test_eval_cases.py
