[project]
name = "biomni-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "aixtools",
    "chainlit>=2.6.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aixtools"
]

[tool.uv.sources]
aixtools = { git = "https://github.com/azu-oncology-rd/aixtools.git" }
