[project]
name = "biomni-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "aixtools",
    "chainlit>=2.6.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aixtools",
    "pondera",
    "pydantic-ai>=1.0.1",
    "pytest-asyncio>=1.1.0",
]

[tool.uv.sources]
aixtools = { git = "https://github.com/azu-oncology-rd/aixtools.git" }
pondera = { git = "ssh://git@github.com/PabloCabaleiro/pondera.git", rev = "v0.4.1" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
